objects/Cvent_Asset_Bundle_Item__c.object
<CustomObject>
    <fields>
        <fullName>Cvent_Asset_Bundle__c</fullName>
        <label>Cvent Asset Bundle</label>
        <referenceTo>Cvent_Asset_Bundle__c</referenceTo>
        <relationshipLabel>Cvent Asset Bundle Items</relationshipLabel>
        <relationshipName>Cvent_Asset_Bundle_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cvent_Asset_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Cvent Asset Type</label>
        <referenceTo>Cvent_Asset_Type__c</referenceTo>
        <relationshipLabel>Cvent Asset Bundle Items</relationshipLabel>
        <relationshipName>Cvent_Asset_Bundle_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Cvent Asset Bundle Item</label>
    <nameField>
        <displayFormat>CABI-{0}</displayFormat>
        <label>Cvent Asset Bundle Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cvent Asset Bundle Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Quantity__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>